[package]
name = "img-vwr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.10", features = ["derive"] } 
image = "0.24.1"
pixels = "0.9.0"
thiserror = "1.0.30"
winit = "0.26.1"
[features]
